--- a/lrec2016.bib
+++ b/lrec2016.bib
@@ -143,7 +143,7 @@ pages ={617--626},
 
 @InProceedings{Niv:Nil:Hal:2006,
   author = 	 {Nivre, Joakim and Nilsson, Jens and Hall, Johan},
-  title = 	 {Talbanken05: A Swedish Treebank with Phrase Structure and Dependency Annotation},
+  title = 	 {Talbanken05: A {S}wedish Treebank with Phrase Structure and Dependency Annotation},
   booktitle ={Proceedings of the Fifth International Conference on Language Resources and Evaluation ({LREC})},
   year = 	 2006,
   address = 	 {Genoa, Italy}}
