Proofreading, minor changes

--- a/final.tex
+++ b/final.tex
@@ -760,7 +760,7 @@ respectively.
 }
 
 \subsection{Dependency parsing}
-We perform a set of parse experiments in order to evaluate the the UD
+We perform a set of parse experiments in order to evaluate the UD
 scheme for Norwegian, and further compare these results to those
 obtained using the original NDT schemes. In our experiments, we
 further contrast the use of gold vs. automatically assigned PoS-tags
