--- a/final.tex
+++ b/final.tex
@@ -626,8 +626,7 @@ verb, direct object and a preposition, such as {\it snu ryggen til}
 'turn (one's) back to' as well as certain fixed combinations of
 prepositions which function as a whole syntactically, e.g. {\it til og
   med} 'even (lit. to and with)'. Without any existing annotation,
-distinguishing these from the regular particle constructions these are
-difficult to differentiate automatically.
+distinguishing these from the regular particle constructions automatically is difficult.
 
 
 \paragraph{Relative clauses}The analyses of relative clauses differ notably between the two
@@ -782,7 +781,7 @@ data set, for the most realistic comparison.
 The parsing results are presented in Table \ref{tb:parsingeval}. We
 find that the UD-parser obtains a labeled accuracy score (LAS) of
 88.5\% on both the dev and test sets using gold standard PoS-tags. The
-corresponding results for the NDT-parser are 90.15\% (dev) and 90-55\%
+corresponding results for the NDT-parser are 90.15\% (dev) and 90.55\%
 (test).
 
 \ctable[botcap,
@@ -814,7 +813,7 @@ designed to be cross-lingually applicable. A similar trend was
 observed for Danish UD parsing \cite{Joh:Alo:Pla:15}. They observed a
 drop in results from the original 84.38\% LAS to 81.56 \% LAS for UD.
 For Bulgarian, \newcite{Ose:Sim:15} observed a drop from 89.14\% to
-83.5\% for a preliminary version of their UD conversion for the BulTreeBank.
+83.5\% for a preliminary version of their UD conversion.
 
 In the experiments using automatically assigned tags (Auto), we
 combine the output of the taggers described in the previous section
